<resources>
    <string name="app_name">Demo_App_03</string>
    <string name="todo">TODO</string>
    <string name="techtalks">TechTalks</string>
    <string name="enter_your_name">Enter your name...</string>
    <string name="enter_your_email">Enter your email...</string>
    <string name="enter_your_phone_nember">Enter your phone nember...</string>
    <string name="register">Register</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="phone">phone:</string>
    <string name="gender">gender:</string>
    <string name="password">password:</string>
    <string name="confimr_password">confimr password:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_gender">Enter your gender...</string>
    <string name="enter_your_password">Enter your password...</string>
    <string name="confirm_your_password">Confirm your password...</string>
    <string name="have_an_account_log_in">Have an account? Log in!</string>
</resources>