<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B92A1"
    tools:context=".Home">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/demo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aladin"
        android:text="@string/techtalks"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:hint="@string/enter_your_name"
        android:padding="15dp"
        app:circularflow_radiusInDP="3dp"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:hint="@string/enter_your_email"
        app:circularflow_radiusInDP="3dp"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:hint="@string/enter_your_phone_number"
        app:circularflow_radiusInDP="3dp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:hint="@string/enter_your_gender"
        app:circularflow_radiusInDP="3dp"
        app:layout_constraintEnd_toEndOf="@+id/phone"
        app:layout_constraintStart_toStartOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:hint="@string/enter_your_password"
        app:circularflow_radiusInDP="3dp"
        app:layout_constraintEnd_toEndOf="@+id/gender"
        app:layout_constraintStart_toStartOf="@id/gender"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        android:hint="@string/confirm_your_password"
        app:circularflow_radiusInDP="3dp"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toStartOf="@id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        android:padding="15dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="@+id/confirmpassword"
        app:layout_constraintEnd_toEndOf="@+id/confirmpassword"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
        android:layout_marginTop="26dp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account_log_in"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>